# rocket-sim

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
examples/: basic_simulation.py  compare_rockets.py  custom_rocket.py  physics_exploration.py
src/rocket_sim/: __init__.py  cli.py  config.py  models.py  motors.py  physics.py  presets.py  simulation.py  validation.py  visualization.py
tests/: __init__.py  conftest.py  test_config.py  test_export.py  test_models.py  test_motors.py  test_physics.py  test_presets.py  test_recovery.py  test_simulation.py  test_validation.py
